# xmark

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  api.gv  api2.gv  cypress.json  dot.py  package-lock.json  package.json  vis.py
.github/workflows/: ci.yml
cypress/integration/: base-redir.spec.js  issue-4.js  prev-next.spec.js
d3/: Cargo.toml
d3/src/: main.rs
docs/: xmark.toml
docs/dev-guide/: SUMMARY.md  api.dot  principles.md
docs/plugin-guide/: SUMMARY.md
docs/users-guide/: SUMMARY.md
dummy-book/: manifest.json  xmark.toml
dummy-book/book-1/: SUMMARY.md  ch15-01-box.md
dummy-book/book-2/: SUMMARY.md
dummy-book/book-3/: SUMMARY.md  c1.md  c2.md  c3.md  c31.md  c32.md  c33.md  pre1.md  pre2.md
ninja-syntax/: Cargo.toml  ninja_syntax.py  ninja_syntax_test.py  reset-py.sh
ninja-syntax/src/: lib.rs
src/: book.rs  cli.rs  config.rs  create_missing.rs  html_render.rs  lib.rs  main.rs  summary.rs  test_utils.rs
src/cli/: args.rs  conf.rs  config.rs  create_missing.rs  main.rs  mod.rs  summary.rs
src/cli/cmd/: build.rs  mod.rs
src/cli/snapshots/: xmark__cli__config__tests__hydrate_dummy.snap  xmark__cli__create_missing__tests__dummy_e2e.snap  xmark__cli__summary__tests__add_space_for_multi_line_chapter_names.snap  xmark__cli__summary__tests__allow_space_in_link_destination.snap  xmark__cli__summary__tests__an_empty_link_location_is_a_draft_chapter.snap  xmark__cli__summary__tests__keep_numbering_after_separator.snap  xmark__cli__summary__tests__parse_nested_numbered_chapters.snap  xmark__cli__summary__tests__parse_numbered_chapters_separated_by_comment.snap  xmark__cli__summary__tests__parse_titled_parts.snap  xmark__cli__tests__absolute.snap  xmark__cli__tests__canonicalize_cwd_dir.snap  xmark__cli__tests__canonicalize_rel_templ.snap
src/content/: collect.rs  mod.rs  pagetoc.rs  render.rs  summary.rs
src/content/snapshots/: xmark__content__tests__dummy_e2e.snap
src/html_render/: content.rs  mod.rs  tpl_types.rs
src/html_render/content/: collect.rs  mod.rs  pagetoc.rs  render.rs
src/l1/l2/: l3.rs  mod.rs
src/render/: mod.rs
src/snapshots/: xmark__cli__tests__absolute.snap  xmark__cli__tests__canonicalize.snap  xmark__cli__tests__canonicalize_cwd_dir.snap  xmark__cli__tests__canonicalize_rel_templ.snap  xmark__config__tests__hydrate_dummy.snap  xmark__create_missing__tests__dummy_e2e.snap  xmark__html_render__tests__dummy_e2e.snap  xmark__html_render__tests__render_readmes@rg.md.snap  xmark__html_render__tests__render_readmes@sqlite.md.snap  xmark__html_render__tests__render_readmes@widget.md.snap  xmark__html_render__tests__render_readmes@ytdl.md.snap  xmark__summary__tests__add_space_for_multi_line_chapter_names.snap  xmark__summary__tests__allow_space_in_link_destination.snap  xmark__summary__tests__an_empty_link_location_is_a_draft_chapter.snap  xmark__summary__tests__can_have_a_subheader_between_nested_items.snap  xmark__summary__tests__keep_numbering_after_separator.snap  xmark__summary__tests__parse_nested_numbered_chapters.snap  xmark__summary__tests__parse_titled_parts.snap
www/: base.html  chapter.html  head.html  head.jinja  index.jinja  page.html
www/static/css/: chrome.css
www/templates/: head.html  page.html  redirect.html
(+5 files in other folders)
