[package]
name = "xmark"
version = "0.1.0"
authors = ["Nixon Enraght-Moony <nixon.emoony@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies]
chrono = "0.4.19"
color-eyre = "0.5.6"
eyre = "0.6.1"
ignore = "0.4.16"
notify = "4.0.15"
pulldown-cmark = "0.8.0"
serde = { version ="1.0.117", features = [ "derive" ] }
toml = "0.5.7"
tracing = "0.1.21"

[dev-dependencies]
literally = "0.1.3"
pretty_assertions = "0.6.1"
