[package]
name = "xmark"
version = "0.1.0"
authors = ["Nixon Enraght-Moony <nixon.emoony@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO: Templating engine
ammonia = "3.1.0"
chrono = "0.4.19"
clap = "3.0.0-beta.2"
color-eyre = "0.5.6"
dashmap = "3.11.10"
elasticlunr-rs = "2.3.9"
eyre = "0.6.1"
ignore = "0.4.16"
lru = "0.6.0"
notify = "4.0.15"
open = "1.4.0"
pbr = "1.0.3"
pulldown-cmark = "0.8.0"
rayon = "1.4.1"
rusqlite = "0.24.1"
serde = { version ="1.0.117", features = [ "derive" ] }
shlex = "0.1.1"
tempfile = "3.1.0"
term-table = "1.3.0"
tokio = "0.2.0"
toml = "0.5.7"
tracing = "0.1.21"
warp = "0.2.5"

[dev-dependencies]
assert_cmd = "1.0.1"
assert_fs = "1.0.0"
literally = "0.1.3"
predicates = "1.0.5"
pretty_assertions = "0.6.1"
select = "0.5.0"
walkdir = "2.3.1"
