[package]
name = "xmark"
version = "0.1.0"
authors = ["Nixon Enraght-Moony <nixon.emoony@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO: Templating engine
ammonia = "3.1.0"
chrono = "0.4.19"
clap = "3.0.0-beta.2"
color-backtrace = "0.4.2"
color-eyre = "0.5.6"
dashmap = "3.11.10"
elasticlunr-rs = "2.3.9"
eyre = "0.6.1"
handlebars = "3.5.0"
ignore = "0.4.16"
liquid = "0.21.4"
log = "0.4.11"
lol_html = "0.2.0"
lru = "0.6.0"
memchr = "2.3.3"
notify = "4.0.15"
open = "1.4.0"
pbr = "1.0.3"
pulldown-cmark = {path='./pulldown-cmark'}
r2d2 = "0.8.9"
r2d2_sqlite = "0.17.0"
ramhorns = "0.10.2"
rayon = "1.4.1"
regex = "1.4.1"
rsass = "0.14.2"
rusqlite = "0.24.1"
seahash = "4.0.1"
serde = { version ="1.0.117", features = [ "derive" ] }
serde_derive = "1.0.117"
serde_repr = "0.1.6"
serde_rusqlite = "0.26.0"
shlex = "0.1.1"
syntect = "4.4.0"
tempfile = "3.1.0"
tera = "1.5.0"
term-table = "1.3.0"
tokio = "0.2.0"
toml = "0.5.7"
tracing = "0.1.21"
warp = "0.2.5"

[dev-dependencies]
assert_cmd = "1.0.1"
assert_fs = "1.0.0"
literally = "0.1.3"
predicates = "1.0.5"
pretty_assertions = "0.6.1"
select = "0.5.0"
walkdir = "2.3.1"

[workspace]
members = [
	'pulldown-cmark',
	'mdbook'
]
