[package]
name = "ninja-syntax"
version = "0.1.0"
authors = ["Nixon Enraght-Moony <nixon.emoony@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "A generator for .ninja files"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memchr = "2.3.3"
textwrap = "0.12.1"

[dev-dependencies]
pretty_assertions = "0.6.1"
